@startuml HU04_clases
class Cita {
  - idCita: int
  - fechaHora: DateTime
  - estado: String
  - duracion: int
  - precio: double
  + calcularDuracionPrecio(idServicio: int): void
  + confirmar(): boolean
}

class Servicio {
  - idServicio: int
  - nombre: String
  - duracionBase: int
  - precioBase: double
}

class ControladorCita {
  + validarSeleccion(servicio: Servicio, barbero: Barbero, horario: Turno): boolean
  + confirmarReserva(idCliente: int, servicio: Servicio, barbero: Barbero, horario: Turno): void
  + verificarYReservarTurno(horario: Turno): boolean
}

class RepositorioCita {
  + guardarCita(cita: Cita): boolean
}

class Cliente {
  - idCliente: int
  - nombre: String
}

class Barbero {
  - idBarbero: int
  - nombre: String
}

ControladorCita "1" --> "1" RepositorioCita : usa >
Cliente "1" --> "0..*" Cita : realiza >
Barbero "1" --> "0..*" Cita : atiende >
Cita "1" --> "1" Servicio : referencia >
@enduml
